processor/src/test/resources/validationExamples/bad/resource extends unacceptable.java
// This file is compiled only in test.
package x;

import com.inrupt.rdf.wrapping.annotation.Resource;

@Resource
interface X extends Comparable {
}
